white space fix for quicklinks

--- a/project-school-beta/style.css
+++ b/project-school-beta/style.css
@@ -78,7 +78,7 @@ div#quicklinks-container {
   background-color: #2db300;
   margin-left: -8px;
   margin-right: -8px;
-  margin-top: -4px;
+  margin-top: -2vw;
   height: 9vw;
   font-family: "Noto Sans", sans-serif;
   margin-bottom: 10vw;
